--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,8 +1,34 @@
 {
     "cSpell.words": [
+        "bifedelomo",
+        "bifedepollo",
+        "chacarero",
         "CHACARERO",
+        "costeleta",
         "Costeleta",
+        "costeletariojana",
+        "costillitasbarbacoa",
+        "empanadadoc",
+        "empanadau",
         "Fugazzeta",
-        "Mila"
+        "guarnicion",
+        "hambueguesa",
+        "lomito",
+        "lomoalafrontera",
+        "lomoalchampi",
+        "mila",
+        "Mila",
+        "milaberenjena",
+        "milacaballo",
+        "milacerdo",
+        "milachoclo",
+        "milanesa",
+        "milas",
+        "papasbravas",
+        "pollochampi",
+        "tablacaballo",
+        "tablacheddar",
+        "tablafugazzeta",
+        "tablanapo"
     ]
 }
